# dircraft

./: README.md  pyproject.toml  setup.py
dircraft/: __init__.py  cli.py  creator.py  exceptions.py
dircraft/templates/: __init__.py  python_dev.py
examples/: basic_usage.py  simple_paths.py  with_content.py
